# sams-log-supplemental

./: .gitignore  MONETIZATION_SETUP.md  README.md  build.py  buildblog.py  config.py  monetization_helpers.py  pyproject.toml  requirements.txt  test_site.py
.amazonq/rules/: poetry.md
.github/workflows/: deploy.yml
blogIdeas/: S3 Metadata for Change Request Trackin.md
posts/: about.md  best-practices-guide.md  building-this-blog.md  cloudwatch-agent-filesystem-filtering.md  glamping-guide.md  hello-world.md  investigator-vpc-flow-log-analyzer.md  kms-scp-key-deletion-protection.md  monetization-example.md  s3-metadata-guardduty-correlation.md
static/: base.css  script.js  styles.css
static/themes/: dark.css  lcars.css  lcars2.css  material3.css
templates/: 404.html  base.html  index.html  post.html
