[tool.poetry]
name = "sams-log-supplemental"
version = "0.1.0"
description = "Sam's technical blog with Python and Markdown"
authors = ["Sam Fakhreddine <sam@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.8.2"
jinja2 = "^3.1.2"
python-frontmatter = "^1.0.1"
pytz = "^2023.3"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

